...
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimaryDark">

    <LinearLayout
        android:id="@+id/user_account_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
...

            </android.support.v7.widget.CardView>

        </GridLayout>

        <LinearLayout
            android:id="@+id/danger_zone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_delete_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:background="?attr/colorPrimary"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:text="Delete Account"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/save"
            android:layout_width="match_parent"
...
